Fixed embarrassing bug on mobile about page

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -68,7 +68,7 @@
 	}
 
 	.about-card-mobile {
-		width: 90%;
+		width: 80%;
 		padding: 20px;
 		position: relative;
 	}
